# EEGspace

./: .gitignore  201018.py  Autoencoder.py  Classification.py  ClosedLoopControl.py  ClosedLoopRunner.py  Common.py  Complete_PSD_plots.py  Config.py  CycleTestData.py  FileUtils.py  InputProcessing.py  InputProcessingResult.py  LICENSE  Main.py  McFlyTest.py  Model.py  Modelling.py  MouseData.py  Multitaper.py  Offline_approach.py  PlottingVideoApp  Preprocessing.py  README  README.md  SimpleUserInterface.py  SmoothingTests.py  StimulusOutput.py  Storage.py  TestFileGeneration.py  TestSmoothingMultiEpochs.py  TestStacking.py  Testing.py  Timer.py  Timing.py  TsmoothieTests.py  UserInterface.py  VaeSmoothing.py  WhiteNoiseOutput.py  environment.txt  (+9 more)
GUI/: OfflineWindowConfiguration.py  OfflineWindowDPA.py  OfflineWindowKnn.py  OfflineWindowLDA.py  PageWindow.py  UserInterface.py  Utilities.py
OfflineAnalysis/: ANN.py  ClusteringAndClassification.py  CombineMice.py  Config.py  DPA.py  DPA_all.py  DensityPeaks.py  Expand.py  GeneralUtils.py  LoadData.py  MergeFiles.py  Mouse.py  NearestNeighbors.py  OnlineFiles.py  Outliers.py  PlottingUtils.py  ProcessSmrx.py  SVM.py  Transformations.py
OnlineAnalysis/: Config.py  InputProcessing.py  InputProcessingResult.py  LoadModels.py  Modelling.py  Preprocessing.py  StimulusOutput.py  TestFileGeneration.py  Timing.py  UserInterface.py  WhiteNoiseOutput.py
Spike2Scripts/: PipeData.s2s
smrx_version/: ANN.py  Offline_analysis.py  Online_analysis.py  functions.py  lda_210216_210301_Vglut2Cre-SuM_all_mice.joblib
(+13 files in other folders)
