[project]
name = "EEGspace"
version = "0.0.1"
authors = [{name = "Vassilis Bitsikas & Matt Grant"}]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    'tensorflow==2.3.0',
#    'numpy',
#    'pandas',
    'easycython',
    'DPA',
    'joblib',
    'sonpy',
    'h5py',
    'PyQt5',
    'nitime',
    'serial',
    'importlib-metadata; python_version<"3.10"',
]


[tool.setuptools]
py-modules = []

[project.urls]
Home = "https://github.com/VBits/EEGspace"